--- a/src/main/resources/templates/courses/showCourse.html
+++ b/src/main/resources/templates/courses/showCourse.html
@@ -15,21 +15,29 @@
             <div class="about_course">
                     <h1>О курсе</h1>
                     <div class="aim">
-                            <p><img th:src="@{/resources/image/icons/aim.png}"><b>Цель программы</b></p>
-                            <div> 
-                                [[*{courseGoal}]]
-                            </div>
+                        <p><img th:src="@{/resources/image/icons/aim.png}"><b>Цель программы</b></p>
+                        <div> 
+                            <ul class="list6a">
+                                <li>[[*{courseGoal}]]</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="listeners">
                             <p><img th:src="@{/resources/image/icons/listener.png}"><b>Для кого</b></p>
                             <div> 
-                                [[*{courseAudience}]]
+                                <ul class="list6a">
+                                    <li>
+                                        [[*{courseAudience}]]
+                                    </li>
+                                </ul>
                             </div>
                     </div>
                     <div class="skills">
                         <p><img th:src="@{/resources/image/icons/books.png}"><b>Чему учат</b></p>
                         <div> 
-                            [[*{courseSubject}]]
+                            <ul class="list6a">
+                                <li>[[*{courseSubject}]]</li>
+                            </ul> 
                         </div>
                     </div>
             </div>
@@ -40,19 +48,11 @@
     <div class="speakers">
         <th:block th:replace="~{fragments/course/courseTeachers :: courseTeachers (*{teachers})}"></th:block>
     </div>
-<!--    <div class="comments">
+    <div class="comments">
         <h1 class="text-center my-5">Отзывы о курсе</h1>
-
-        <div class="d-flex flex-column col-12" id="comments">
-        <?php
-        if(!empty($comments)){
-            Theme::block('courses/course_reviews', [
-                        'comments' => $comments
-                    ]);
-        }else{
-            echo '<h4 class="text-center" id="removableSign">Отзывов пока нет.</h4>';
-        }
-        ?>
+            
+        <div class="d-flex flex-column col-12" id="listReviews">
+            <th:block th:replace="~{fragments/course/courseReviews :: courseReviews (*{courseReviews})}"></th:block>
         </div>
         <div class="add_comment" id="add_comment_item">
             <h1>Написать отзыв</h1>
@@ -80,12 +80,14 @@
                 </div>
                 <div class='d-flex justify-content-center'>
                     <div class="btn_add_comment_form">
-                        <button type="submit" name="button_request" class="btn" onclick="course.addReviewItem(event, <?= $course['id'] ?>)">Отправить</button>
+                        <button type="submit" name="button_request" class="btn"
+                                th:onclick="|course.addReviewItem(event, *{id})|">Отправить</button>
                     </div>
                 </div>
             </form>
         </div>
-    </div> -->
+    </div> 
+    
     <div class="container gallery">
         <th:block th:replace="~{fragments/course/courseGallery :: courseGallery (*{courseGalleryImages})}"></th:block>
     </div>
