--- a/src/main/resources/templates/admin/fragments/course/courseGalleryImageItem.html
+++ b/src/main/resources/templates/admin/fragments/course/courseGalleryImageItem.html
@@ -3,7 +3,7 @@
       <div class="card mb-4 shadow-sm">
         <img class="bd-placeholder-img card-img-top" 
              th:id="|gallery-image-${galleryItem.id}|"
-             th:src="'/img/courses/gallery/' + ${galleryItem.name}" width="300" height="225" >
+             th:src="${galleryItem.name}" width="300" height="225" >
         <div class="card-body">
           <div class="d-flex align-items-center justify-content-center">
             <button class="col-6 btn btn-outline-danger" th:onclick="|course.deleteCourseGalleryImage(event, ${galleryItem.id})|">Удалить</button>
