--- a/src/main/resources/templates/fragments/nearestCourses.html
+++ b/src/main/resources/templates/fragments/nearestCourses.html
@@ -6,7 +6,7 @@
                 <p>Начало: <b>[[*{#dates.format(courseStartDate, 'dd/MMM/yyyy')}]]</b></p>
             </div>
             <div class='info'>
-                <img th:src="*{mainImage} ? '/img/courses/main_image/' + *{mainImage.name}: '/'">
+                <img th:src="*{mainImage} ? *{mainImage.name}: '/'">
                 <h3 th:text="*{title}"></h3>
                 <p><b>Длительность: </b>[[*{courseTime}]] часов</p>
                 <p><b>Стоимость: </b>[[*{coursePrice}]] рублей</p>
