--- a/src/main/resources/templates/admin/courses/coursesList.html
+++ b/src/main/resources/templates/admin/courses/coursesList.html
@@ -25,7 +25,7 @@
                 <th th:text="${course.title}" class="col-2"></th>
                 <td th:text="${#strings.abbreviate(course.courseGoal,30)}" class="col-3"></td>
 <!--                <td  th:text="${course.courseForm}" class="col-3">></td>-->
-                <td  th:text="*{courseForm.getValue()}" class="col-3">></td>
+                <td  th:text="*{courseForm?.getValue()}" class="col-3">></td>
                 <td th:text="*{courseStatus.getValue()}" class="col-2"></td>
                 <td class="col-2"><a th:text="'Перейти'" th:href="@{'courses/' + ${course.id}}"></a></td>
             </tr>
