--- a/src/main/resources/static/resources/css/index.css
+++ b/src/main/resources/static/resources/css/index.css
@@ -334,7 +334,7 @@ main {
 }
 .calendar_item {
     width: 100%;
-    max-width: 270px;
+    max-width: 540px;
     text-align: center;
     border-radius: 8px;
     padding: 10px;
@@ -350,8 +350,10 @@ main {
 	box-shadow: 0 0 15px rgba(0,0,0,0.5); 
 }
 .calendar_item .info {
+    display: flex;
+    flex-direction: row;
     height: 100%;
-    min-height: 410px;
+    /*min-height: 410px;*/
     vertical-align: top;
 }
 .calendar_item h3 {
@@ -374,8 +376,9 @@ main {
     background-color: rgba(85, 180, 50, 0.575);
     padding: 10px; 
     border-radius: 8px 8px 0 0;
-    width: 270px;
+    /*width: 270px;*/
     margin-left: -10px;
+    margin-right: -10px;
     margin-top: -10px;
   
 }
