--- a/src/main/resources/templates/fragments/nearestCourses.html
+++ b/src/main/resources/templates/fragments/nearestCourses.html
@@ -8,8 +8,8 @@
             <div class='info'>
                 <img th:src="*{mainImage} ? *{mainImage.name}: '/'">
                 <h3 th:text="*{title}"></h3>
-                <p><b>Длительность: </b>[[*{courseTime}]] часов</p>
-                <p><b>Стоимость: </b>[[*{coursePrice}]] рублей</p>
+<!--                <p><b>Длительность: </b>[[*{courseTime}]] часов</p>
+                <p><b>Стоимость: </b>[[*{coursePrice}]] рублей</p>-->
             </div>
         </div>
     </a>
